--- a/src/sqlite/.env
+++ b/src/sqlite/.env
@@ -1,3 +1,4 @@
 RPC_HTTP_URL=https://garnet-rpc.web3.scetrov.live
 RPC_WS_URL=https://garnet-rpcws.web3.scetrov.live
 SQLITE_FILENAME=/data/indexer.db
+DEBUG=mud:*
